--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -44,11 +44,11 @@
     <script>
         function showRegister(){
             document.getElementById('register-container').style.display = 'block';
-            document.getElementById('login-container').style.display = 'none';
+            // document.getElementById('login-container').style.display = 'none';
         }
 
         function showLogin(){
-            document.getElementById('register-container').style.display = 'none';
+            // document.getElementById('register-container').style.display = 'none';
             document.getElementById('login-container').style.display = 'block';
         }
 
@@ -64,20 +64,15 @@
                 body: JSON.stringify({username: username, password: password})
             })
                 .then(response => {
-                    if (response.ok){
-                        return response.json();
-                    } else {
+                    if (!response.ok){
                         throw new Error("Login failed");
                     }
+                    return response.json();
                 })
                 .then(data => {
-                    if (data.success){
-                        // 登录成功，存储用户ID
-                        window.localStorage.setItem('userId', data.userId);
-                        window.location.href = '/index.html';
-                    } else {
-                        alert('Login failed!');
-                    }
+                    // 登录成功，存储用户ID
+                    window.localStorage.setItem('userId', data.id);
+                    window.location.href = '/index.html';
                 })
                 .catch(error => {
                     console.error('Error login:', error);
@@ -98,17 +93,11 @@
             })
                 .then(response => {
                     if (response.ok){
+                        alert('Registration successful. Please login.');
+                        window.location.href = '/login.html';
                         return response.json();
                     } else {
                         throw new Error("Registration failed");
-                    }
-                })
-                .then(data => {
-                    if (data.success){
-                        alert('Registration successful. Please login.');
-                        window.location.href = '/login.html';
-                    } else {
-                        alert('Registration failed!');
                     }
                 })
                 .catch(error => {
