使用orElseThrow；开发时前后端分离；优化了前端代码结构

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         }
     </style>
 </head>
+<script src="/requests.js" defer></script>
 
 <body>
     <h1>Todo List</h1>
@@ -50,24 +51,31 @@
             fetchTodos(0,3);
         })
 
-        function fetchTodos(page, size) {
-            fetch(`/users/todos?page=${page}&size=${size}`,{
-                method: 'GET',
-                headers: {
-                    'Authorization': 'Bearer ' + window.localStorage.getItem('token')
-                }
-            })
-                .then(response => response.json())
-                .then(data => {
-                    const todos = data.content //提取分页数据中的内容
-                    const totalPages = data.totalPages;
-                    const currentPage = data.number + 1;
-                    displayTodos(todos); //显示当前页的todos
-                    displayPagination(totalPages, currentPage); //显示分页
-                })
-                .catch(error => {
-                    console.error('Error fetching todos:', error);
-                });
+        async function fetchTodos(page, size) {
+            const data = await get(`/v1/users/todos`,{page, size});
+            const todos = data.content //提取分页数据中的内容
+            const totalPages = data.totalPages;
+            const currentPage = data.number + 1;
+            displayTodos(todos); //显示当前页的todos
+            displayPagination(totalPages, currentPage); //显示分页
+
+            // fetch(`/v1/users/todos?page=${page}&size=${size}`,{
+            //     method: 'GET',
+            //     headers: {
+            //         'Authorization': 'Bearer ' + window.localStorage.getItem('token')
+            //     }
+            // })
+            //     .then(response => response.json())
+            //     .then(data => {
+            //         const todos = data.content //提取分页数据中的内容
+            //         const totalPages = data.totalPages;
+            //         const currentPage = data.number + 1;
+            //         displayTodos(todos); //显示当前页的todos
+            //         displayPagination(totalPages, currentPage); //显示分页
+            //     })
+            //     .catch(error => {
+            //         console.error('Error fetching todos:', error);
+            //     });
         }
 
         function displayTodos(todos){
@@ -118,7 +126,7 @@
 
 
         // 添加新的 TODO
-        function createToDo() {
+        async function createToDo() {
             const content = document.getElementById('new-todo-content').value;
             if (content.trim() === '') {
                 alert('ToDo content cannot be empty');
@@ -129,26 +137,30 @@
                 completed: false
             };
 
-            fetch(`/users/todos`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': 'Bearer ' + window.localStorage.getItem('token')
-                },
-                body: JSON.stringify(newToDo)
-            })
-                .then(response => {
-                    if (response.ok) {
-                        document.getElementById('new-todo-content').value = '';
-                        fetchTodos(0,3);
-                    } else {
-                        throw new Error('Failed to create todo');
-                    }
-                })
-                .catch(error => {
-                    console.error('Error adding todo:', error);
-                });
-        }
+            await post(`/v1/users/todos`, newToDo);
+            document.getElementById('new-todo-content').value = '';
+            fetchTodos(0,3);
+
+        //     fetch(`/v1/users/todos`, {
+        //         method: 'POST',
+        //         headers: {
+        //             'Content-Type': 'application/json',
+        //             'Authorization': 'Bearer ' + window.localStorage.getItem('token')
+        //         },
+        //         body: JSON.stringify(newToDo)
+        //     })
+        //         .then(response => {
+        //             if (response.ok) {
+        //                 document.getElementById('new-todo-content').value = '';
+        //                 fetchTodos(0,3);
+        //             } else {
+        //                 throw new Error('Failed to create todo');
+        //             }
+        //         })
+        //         .catch(error => {
+        //             console.error('Error adding todo:', error);
+        //         });
+         }
         // 删除ToDo
         function deleteToDo() {
             const id = document.getElementById('delete-todo-id').value;
@@ -156,7 +168,7 @@
                 alert('ToDo id cannot be empty');
                 return;
             }
-            fetch(`/users/todos/${id}`, {
+            fetch(`/v1/users/todos/${id}`, {
                 method: 'DELETE',
                 headers: {
                     'Authorization': 'Bearer ' + window.localStorage.getItem('token')
@@ -180,7 +192,7 @@
                 content: content,
                 completed: completed
             };
-            fetch(`/users/todos/${id}`, {
+            fetch(`/v1/users/todos/${id}`, {
                 method: 'PATCH',
                 headers: {
                     'Content-Type': 'application/json',
@@ -215,7 +227,7 @@
                 content: content,
                 completed: false
             };
-            fetch(`/users/todos/${id}`, {
+            fetch(`/v1/users/todos/${id}`, {
                 method: 'PATCH',
                 headers: {
                     'Content-Type': 'application/json',
