完成了前端代码结构的优化，前后端耦合以便后续放服务器上

--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
         }
     </style>
 </head>
-<script src="public/requests.js" defer></script>
+<script src="requests.js" defer></script>
 
 <body>
     <div class="login-container">
