--- a/index.html
+++ b/index.html
@@ -58,24 +58,6 @@
             const currentPage = data.number + 1;
             displayTodos(todos); //显示当前页的todos
             displayPagination(totalPages, currentPage); //显示分页
-
-            // fetch(`/v1/users/todos?page=${page}&size=${size}`,{
-            //     method: 'GET',
-            //     headers: {
-            //         'Authorization': 'Bearer ' + window.localStorage.getItem('token')
-            //     }
-            // })
-            //     .then(response => response.json())
-            //     .then(data => {
-            //         const todos = data.content //提取分页数据中的内容
-            //         const totalPages = data.totalPages;
-            //         const currentPage = data.number + 1;
-            //         displayTodos(todos); //显示当前页的todos
-            //         displayPagination(totalPages, currentPage); //显示分页
-            //     })
-            //     .catch(error => {
-            //         console.error('Error fetching todos:', error);
-            //     });
         }
 
         function displayTodos(todos){
@@ -140,79 +122,32 @@
             await post(`/v1/users/todos`, newToDo);
             document.getElementById('new-todo-content').value = '';
             fetchTodos(0,3);
-
-        //     fetch(`/v1/users/todos`, {
-        //         method: 'POST',
-        //         headers: {
-        //             'Content-Type': 'application/json',
-        //             'Authorization': 'Bearer ' + window.localStorage.getItem('token')
-        //         },
-        //         body: JSON.stringify(newToDo)
-        //     })
-        //         .then(response => {
-        //             if (response.ok) {
-        //                 document.getElementById('new-todo-content').value = '';
-        //                 fetchTodos(0,3);
-        //             } else {
-        //                 throw new Error('Failed to create todo');
-        //             }
-        //         })
-        //         .catch(error => {
-        //             console.error('Error adding todo:', error);
-        //         });
          }
+
         // 删除ToDo
-        function deleteToDo() {
+       async function deleteToDo() {
             const id = document.getElementById('delete-todo-id').value;
             if (id.trim() === '') {
                 alert('ToDo id cannot be empty');
                 return;
             }
-            fetch(`/v1/users/todos/${id}`, {
-                method: 'DELETE',
-                headers: {
-                    'Authorization': 'Bearer ' + window.localStorage.getItem('token')
-                }
-            })
-                .then(response => {
-                    if (response.ok){
-                        document.getElementById('delete-todo-id').value = '';
-                        fetchTodos(0,3);
-                    } else {
-                        throw new Error('Failed to delete todo');
-                    }
-                })
-                .catch(error => {
-                    alert('Error deleting todo:', error)
-                });
+            await del(`/v1/users/todos/${id}`);
+            document.getElementById('delete-todo-id').value = '';
+            fetchTodos(0,3);
         }
+
         //更新check
-        function updateCheck(id,content,completed){
+        async function updateCheck(id,content,completed){
             const updatedToDo = {
                 content: content,
                 completed: completed
             };
-            fetch(`/v1/users/todos/${id}`, {
-                method: 'PATCH',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': 'Bearer ' + window.localStorage.getItem('token')
-                },
-                body: JSON.stringify(updatedToDo)
-            })
-                .then(response => {
-                    if (response.ok) {
-                        fetchTodos(0,3);
-                    } else {
-                        throw new Error('Failed to update todo');
-                    }
-                })
-                .catch(error => {
-                    console.error('Error updating todo:', error);
-                });
+            await patch(`/v1/users/todos/${id}`, updatedToDo);
+            fetchTodos(0,3);
         }
+
         // 更新ToDo
-        function updateToDo() {
+        async function updateToDo() {
             const id = document.getElementById('update-todo-id').value;
             const content = document.getElementById('update-todo-content').value;
             if (id.trim() === '') {
@@ -227,26 +162,10 @@
                 content: content,
                 completed: false
             };
-            fetch(`/v1/users/todos/${id}`, {
-                method: 'PATCH',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': 'Bearer ' + window.localStorage.getItem('token')
-                },
-                body: JSON.stringify(updatedToDo)
-            })
-                .then(response => {
-                    if (response.ok) {
-                        document.getElementById('update-todo-id').value = '';
-                        document.getElementById('update-todo-content').value = '';
-                        fetchTodos(0,3);
-                    } else {
-                        throw new Error('Failed to update todo');
-                    }
-                })
-                .catch(error => {
-                    console.error('Error updating todo:', error);
-                });
+            await patch(`/v1/users/todos/${id}`, updatedToDo);
+            document.getElementById('update-todo-id').value = '';
+            document.getElementById('update-todo-content').value = '';
+            fetchTodos(0,3);
         }
 
         // 退出登录
